src/stylesheets/modules/forms/cf_link_editor.styl
*[cf-link-editor]
  display: block
  position: relative
  width: $form-controlwidth-inner

.linked-entities
  margin: 0 0 15px 0

  .tooltip
    width: 200px

  .fa-times-circle
    float: right
    margin-top: 3px
    margin-right: 6px
    font-size: 1em
    color: $blue-dark
    &:hover
      color: $gray-medium
      cursor: pointer

.linked-entities__item
  display: flex
  align-items: center
  background-color: $gray-lighter
  margin-bottom: 3px
.asset-link
  .linked-entities__item
    border-top: none
    border-bottom: none
    background-color: none

.linked-entities__handle
  width: 4%
  padding-top: 3px
  padding-left: 7px
  cursor: -webkit-grabbing
  cursor: -moz-grab
  cursor: -moz-grabbing
  &[disabled]
    cursor: auto
  .fa-ellipsis-v
    color: $gray
    opacity: 0.7
    font-size: 15px
.asset-link
  .linked-entities__handle
    top: 50%
    left: 20px
    font-size: 13px
    $layer('handle')

.linked-entities__info
  width: 100%
  position: relative
  padding: 10px 7px 10px 4%
  > a,
  > span
    float: left
    width: 97%
    overflow: hidden
    white-space: nowrap
    text-overflow: ellipsis
    color: $base-font-color
.linked-entities--with-handle
  .linked-entities__info
    width: 96%
    padding-left: 7px
.asset-link
  .linked-entities__info
    padding: 0
  .file-info .file-preview
    border: none
    background: none
    box-shadow: none
    border-radius: 0


.linked-entities__status
  position: absolute
  right: 0
  top: 0
  bottom: 0
  width: 8px
  .status-bar
    $stretch(0, 0, 0, 0)

.link-editor__controls
  position: relative
  display: flex

.link-editor__search
  position: relative
  margin-bottom: 18px

  .l-search-w-autocomplete
    width: 80%
    float: left

  .add-new
    margin-left: auto
  .add-new
    .btn,
    &.btn
      padding-top: 7px
      padding-bottom: 6px

  .endless-container
    max-height: 350px
    overflow-x: hidden

